kyverno/policies/namespaces/require-annotation-to-delete-ns.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: require-delete-annotation-ns-label
  annotations:
    policies.kyverno.io/title: Require delete annotation to be present before deleting namespace
    policies.kyverno.io/category: Operations
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Namespace, Annotation
    policies.kyverno.io/description: >-
      Require namespaces to be annotated with 'uw.systems/delete-allowed: "true"'
      in order to allow deletion.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - namespaces
  validations:
    - expression: >-
        'uw.systems/delete-allowed' in oldObject.metadata.?annotations.orValue({}) &&
        oldObject.metadata.annotations['uw.systems/delete-allowed'] == 'true'
      messageExpression: >-
        'Namespace "' + oldObject.metadata.name + '" must be annotated with: uw.systems/delete-allowed: "true" to be deleted'
