kyverno/policies/namespaces/require-ns-owner-label.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-ns-owner-label
  annotations:
    policies.kyverno.io/title: Require Namespace Owner Label
    policies.kyverno.io/category: Ownership
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace, Label
    policies.kyverno.io/description: >-
      Require all namespaces to mark ownership via uw.systems/owner label.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
  variables:
    - name: allowed_owners
      expression: >-
        [
          'account-identity', 'account-platform',
          'bill', 'billing', 'btg-operations', 'btg-security',
          'cbc', 'contact-channels', 'crm', 'customer', 'customer-platform', 'customer-support',
          'data', 'data-infra', 'dev-enablement', 'digital-support',
          'energy',
          'finance',
          'help-experience',
          'iam', 'insurance',
          'partner',
          'payment',
          'qe',
          'system',
          'telecom',
          'unicom',
        ]
  validations:
    - expression: >-
        'uw.systems/owner' in object.metadata.?labels.orValue({}) && 
        object.metadata.labels['uw.systems/owner'] in variables.allowed_owners
      message: >-
        The label `uw.systems/owner` is required. Check policy at
        https://github.com/utilitywarehouse/system-manifests/tree/master/kyverno/policies/namespaces/require-ns-owner-label.yaml
        for allowed label values.
